--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   intl: ^0.18.0
   path_provider: ^2.0.15
   platform_info: ^4.0.2
-  responsive_framework: ^1.1.0
+  responsive_framework: 0.2.0
   talker_dio_logger: ^2.1.2
   talker_flutter: ^3.1.5
   velocity_x: ^4.1.0
